--- a/config.json
+++ b/config.json
@@ -1,7 +1,11 @@
 {
+
+
 	"url": "http://192.168.0.1",
-	"rebootUrl": "/html/reboot.html",
-	"loginRequest": "/api/user/login",
 	"username": "admin",
-	"password": "admin"
+	"password": "admin",
+
+
+	"rebootUrl": "/html/reboot.html",
+	"loginRequest": "/api/user/login"
 }
