--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Reboots a Huawei router using Puppeteer",
   "main": "index.js",
   "scripts": {
+		"start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Toni Lähdekorpi <toni@lygon.net>",
